# vjepa2

./: .gitignore  .pre-commit-config.yaml  README.md  constraints-cuda.txt  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-geometry.txt  requirements.txt
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CUDA.md  DESIGN_IDENTITY_EVALUATION.md  DESIGN_PHASE01.md  DESIGN_PHASE02_GEOMETRY.md  DESIGN_PHASE03_OBJECT_SLOTS.md  DESIGN_PHASE04_MEMORY.md  DESIGN_PHASE05_PLANNING.md  DESIGN_PHASE06_BENCHMARKS.md  GPU_AND_OBSERVABILITY.md  METRICS.md  PROPOSAL.md  ROADMAP.md  VALIDATION_PLAN.md
jepa4d/: __init__.py
scripts/: __init__.py  aggregate_phase2d_diagnostics.py  aggregate_phase2d_latency.py  aggregate_phase2f_qualification.py  audit_phase2g_formal.py  build_phase2e_sunrgbd_feature_cache.py  build_phase2f_data_cache.py  build_phase2g_data_cache.py  check_cuda.py  download_checkpoints.py  evaluate_phase2e_final.py  evaluate_phase2f_final.py  evaluate_phase2g_heldout.py  log_phase2d_diagnostics.py  materialize_phase2g_sun.py  prepare_sunrgbd_sensor_blocked.py  run_demo_geometry.py  run_demo_multiview.py  run_demo_object_grounding.py  run_demo_single_image.py  run_demo_video_memory.py  run_eval_stagewise.py  run_identity_ablation.py  run_phase2_geometry_benchmark.py  run_phase2b_geometry_distillation.py  run_phase2d_calibration_audit.py  run_phase2d_fusion_attribution.py  run_phase2d_latency_confirmation.py  run_phase2e_factorized_shard.py  run_phase2f_latency.py  run_phase2f_training.py  run_phase2g_formal_training.py  run_phase2g_training_smoke.py  run_phase2g_tuning.py  select_phase2f_survivor.py  select_phase2g_learning_rates.py  select_phase2g_survivor.py  write_phase2_dependency_graphs.py  write_phase2f_dependency_graph.py  write_phase2g_dependency_graph.py
slurm/: lib.sh  (+83 more)
(+247 files in other folders)
